Code cleanup
Removed Trophy code, alongside Entity code: Skeletal King, Witherling.